fixed issues hope works fine

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -5,8 +5,8 @@ pipeline{
     }
     environment{
         DOCKER_CREDS = credentials('docker-cred')
-        BUILD = env.BUILD_NUMBER
-        DOCKERFILE_NAME = ${params.DOCKER-NAME}
+        BUILD = "env.BUILD_NUMBER"
+        DOCKERFILE_NAME = "${params.DOCKER-NAME}"
     }
     stages{
         stage('project build'){
