try to fix issue

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline{
                 }
             }
             steps{
+                sh 'cd project/cicd-project'
                 sh 'mvn clean install'
             }
 
