--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline{
                 }
             }
             steps{
-                sh 'cd project/cicd-project'
+                dir('cicd-project')
                 sh 'mvn clean install'
             }
 
