try to fix issue

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -16,7 +16,7 @@ pipeline{
                 }
             }
             steps{
-                dir('cicd-project')
+                dir('project/cicd-project')
                 sh 'mvn clean install'
             }
 
