--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline{
         stage('project build'){
             agent{
                 docker{
-                    image 'maven:3-jdk-8-alpine'
+                    image 'maven'
                 }
             }
             steps{
