try to fix issue

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -13,6 +13,7 @@ pipeline{
             agent{
                 docker{
                     image 'maven'
+                    args '--user root'
                 }
             }
             steps{
