--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -25,10 +25,13 @@ pipeline{
 
         }
         stage('send dockerfile to ansible server'){
-            environment{
-                DOCKERFILE_NAME = "params.DOCKER-NAME"
-            }
+
             agent any
+
+            environment{
+                DOCKERFILE_NAME = params.DOCKER-NAME
+            }
+            
             steps{
                 sshagent(['ssh-ansible']) {
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.73'
