--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline{
                 sshagent(['ssh-ansible']) {
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.73'
                     sh 'scp -r /var/lib/jenkins/workspace/project/cicd-project/ ubuntu@3.95.19.73:/home/ubuntu/app'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.73 cd /home/ubuntu/app'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.73 cd /home/ubuntu/app/'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.73 docker build -t $DOCKER_CREDS_USR/javafile:1 .'
                 }
             }
