--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -47,7 +47,7 @@ pipeline{
             steps{
                 sshagent(['ssh-ansible']){
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .'
                 }
             }
         }
