--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -46,7 +46,7 @@ pipeline{
             agent any
             steps{
                 sshagent(['ssh-ansible']){
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/app/'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .'
                 }
             }
