--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -36,6 +36,7 @@ pipeline{
                 sshagent(['ssh-ansible']) {
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37'
                     sh 'scp -r /var/lib/jenkins/workspace/project/cicd-project/ ubuntu@3.95.19.37:/home/ubuntu/app/'
+                    sh 'rsync --checksum -ru /var/lib/jenkins/workspace/project/cicd-project/ ubuntu@3.95.19.37:/home/ubuntu/app/'
                     // sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/app/'
                     // sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -f /home/ubuntu/app/ -t $DOCKER_CREDS_USR/javafile:1 '
                 }
