--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline{
             steps{
                 sshagent(['ssh-ansible']) {
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37'
-                    sh 'scp -r /var/lib/jenkins/workspace/project/cicd-project/ ubuntu@3.95.19.37:/home/ubuntu/app/'
+                    sh 'scp -r /var/lib/jenkins/workspace/project/cicd-project/* ubuntu@3.95.19.37:/home/ubuntu/app/'
                     sh 'rsync --checksum -ru /var/lib/jenkins/workspace/project/cicd-project/ ubuntu@3.95.19.37:/home/ubuntu/app/'
                     // sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/app/'
                     // sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -f /home/ubuntu/app/ -t $DOCKER_CREDS_USR/javafile:1 '
@@ -47,8 +47,12 @@ pipeline{
             agent any
             steps{
                 sshagent(['ssh-ansible']){
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/app/'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -f /home/ubuntu/app/dockerfile -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .'
+                    sh '''
+                        ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 << EOF
+                        cd /home/ubuntu/app/
+                        docker build -f /home/ubuntu/app/dockerfile -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .
+                        EOF
+                    '''
                 }
             }
         }
