--- a/cicd-project/dockerfile
+++ b/cicd-project/dockerfile
@@ -5,6 +5,6 @@ RUN mvn install
 
 FROM openjdk:11.0
 WORKDIR /home/app
-COPY --from=build /app/target/Sample-Application.jar /app/
+COPY --from=build /app/target/Sample-Application.jar /home/app/
 EXPOSE 8080
 CMD ["java","-jar","Sample-Application.jar"]
