--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -48,10 +48,10 @@ pipeline{
             steps{
                 sshagent(['ssh-ansible']){
                     sh '''
-                        ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 << EOF
+                        ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 
                         cd /home/ubuntu/app/
                         docker build -f /home/ubuntu/app/dockerfile -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .
-                        EOF
+                        
                     '''
                 }
             }
