--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -49,8 +49,8 @@ pipeline{
                 sshagent(['ssh-ansible']){
                     sh '''
                         ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 
-                        cd /home/ubuntu/app/
-                        docker build -f /home/ubuntu/app/dockerfile -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .
+                        ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/app/
+                        ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 docker build -f /home/ubuntu/app/dockerfile -t $DOCKER_CREDS_USR/javafile:$BUILD_NUMBER .
                         
                     '''
                 }
