--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -60,5 +60,16 @@ pipeline{
                 }
             }
         }
+
+        stage('copy manifests file to ansible server'){
+            steps{
+                sshagent(['ssh-ansible']){
+
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@3.95.19.37 cd /home/ubuntu/kubernetes/ && ansible-playbook ansible-deploy.yml'
+
+                }           
+            }
+        }
     }
 }
