--- a/cicd-project/kubernetes/ansible-deploy.yml
+++ b/cicd-project/kubernetes/ansible-deploy.yml
@@ -2,6 +2,4 @@
   become: true
   tasks: 
     - name: deploy kubernetes
-      k8s:
-        state: present
-        src: /home/ubuntu/manifests/
+      command: kubectl apply -f deploy.yml -i inv
