fix ansible-playbook error i think

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -67,7 +67,7 @@ pipeline{
                 sshagent(['ssh-ansible']){
 
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/kubernetes/ && ansible-playbook ansible-deploy.yml -i inv'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/kubernetes/ && /usr/bin/ansible-playbook ansible-deploy.yml -i inv'
 
                 }           
             }
