fix ansible-playbook error i think

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -68,6 +68,8 @@ pipeline{
 
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 echo $PATH'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 which ansible-playbook'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 ansible --version'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/kubernetes/ && /usr/bin/ansible-playbook ansible-deploy.yml -i inv'
 
                 }           
