change the manifest fil elocation

--- a/cicd-project/Jenkinsfile
+++ b/cicd-project/Jenkinsfile
@@ -70,7 +70,8 @@ pipeline{
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 echo $PATH'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 which ansible-playbook'
                     sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 ansible --version'
-                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cd /home/ubuntu/kubernetes/ && /usr/bin/ansible-playbook ansible-deploy.yml -i inv'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 cp /home/ubuntu/kubernetes/* /home/ubuntu/'
+                    sh 'ssh -o StrictHostKeyChecking=no ubuntu@34.204.5.44 /usr/bin/ansible-playbook ansible-deploy.yml -i inv'
 
                 }           
             }
