--- a/cicd-project/kubernetes/deploy.yml
+++ b/cicd-project/kubernetes/deploy.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: first-deploy-java
-          image:  pardiuman/javafile:latest
+          image:  pardiuman/javafile:1.0
           ports: 
             - containerPort: 9099
 
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata: 
-  name: java-App-service
+  name: java-app-service
 spec:
   selector:
     app: java
