chnages sonar settings

--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -9,7 +9,7 @@ pipeline{
             }
         }
             steps{
-                withSonarQubeEnv('sonar-server'){
+                withSonarQubeEnv('sonarqube'){
                     sh 'mvn sonar:sonar'
                 }
             }
