chnages sonar settings

--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -9,9 +9,13 @@ pipeline{
             }
         }
             steps{
-                withSonarQubeEnv('sonarqube'){
+                withSonarQubeEnv(credentialsId: 'sonarqube-secret') {
+                    // some block
                     sh 'mvn sonar:sonar'
                 }
+                // withSonarQubeEnv('sonarqube'){
+                //     sh 'mvn sonar:sonar'
+                // }
             }
 
         }
