chnages sonar settings

--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -10,13 +10,13 @@ pipeline{
         }
             steps{
                 script{
-                    // withSonarQubeEnv(credentialsId: 'sonarqube-secret') {
-                    //     // some block
-                    //     sh 'mvn sonar:sonar'
-                    // }
-                    withSonarQubeEnv('sonarqube'){
-                    sh 'mvn sonar:sonar'
-                }
+                    withSonarQubeEnv(credentialsId: 'sonarqube-secret') {
+                        // some block
+                        sh 'mvn sonar:sonar'
+                    }
+                //     withSonarQubeEnv('sonarqube'){
+                //     sh 'mvn sonar:sonar'
+                // }
                 }
                 
             }
