--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -10,12 +10,13 @@ pipeline{
             }
         }
             steps{
-                script{
-                    withSonarQubeEnv(credentialsId: 'sonarqube-secret') {
-                        sh 'mvn sonar:sonar'
-                    }
+                // script{
+                //     withSonarQubeEnv(credentialsId: 'sonarqube-secret') {
+                //         sh 'mvn sonar:sonar'
+                //     }
                 
-                }
+                // }
+                sh 'mvn clean install'
                 
             }
 
