building the project using mvn clean install

--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -16,7 +16,7 @@ pipeline{
                 //     }
                 
                 // }
-                sh 'mvn clean install'
+                sh 'cd cicd-project2 && mvn clean install'
                 
             }
 
