--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
             agent{
                 docker {
                     image 'maven'
-                    // args '-user root'
+                    args '-user root'
 
                 }
             }
