--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -9,10 +9,16 @@ pipeline{
 
                 }
             }
+            environment{
+                SONAR_URL="http://192.168.1.10:9000"
+            }
             steps{
                 script{
-                    withSonarQubeEnv(credentialsId: 'sonar-secret') {
-                        sh 'cd cicd-project2 && mvn sonar:sonar'
+                    // withSonarQubeEnv(credentialsId: 'sonar-secret') {
+                    //     sh 'cd cicd-project2 && mvn sonar:sonar'
+                    // }
+                    withCredentials([string(credentialsId: 'sonar-secret', variable: 'AUTH_TOKEN')]) {
+                        sh 'cd cicd-project2 && mvn sonar:sonar -Dsonar.login=$AUTH_TOKEN -Dsonar.host.url=${SONAR_URL}'
                     }
                 
                 
