--- a/cicd-project2/jenkinsfile
+++ b/cicd-project2/jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
         stage('quality gates check'){
             agent{
                 docker {
-                    image 'maven'
+                    image 'maven:3.8.3-openjdk-17'
                     args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
 
                 }
