--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -1,12 +1,12 @@
 pipeline{
-    agent none
+    agent any
     stages{
         stage('sonar'){
             agent{
-                docker{
-                    image 'maven'
-                    args '-v $HOME/.m2:/root/.m2'
-                }
+                // docker{
+                //     image 'maven'
+                //     args '-v $HOME/.m2:/root/.m2'
+                // }
             }
             steps{
                 script{
