--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -2,12 +2,12 @@ pipeline{
     agent any
     stages{
         stage('sonar'){
-            // agent{
-                // docker{
-                //     image 'maven'
-                //     args '-v $HOME/.m2:/root/.m2'
-                // }
-            // }
+            agent{
+                docker{
+                    image 'maven'
+                    args '-v $HOME/.m2:/root/.m2'
+                }
+            }
             steps{
                 script{
                     withSonarQubeEnv(credentialsId: 'sonar-secret') {
