--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
 
                     timeout(time: 1, unit: 'HOURS'){
                         def qualityGate = waitForQualityGate()
-                        if(qualityGate != 'OK'){
+                        if(qualityGate.status != 'OK'){
                             error "quality gate failure ${qualityGate.status}"
                         }
                     }
