add post block with mail

--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -43,4 +43,10 @@ pipeline{
         }
 
     }
+
+    post{
+        always{
+            mail bcc: '', body: 'project : ${env.JOB_NAME} <br>build number: ${env.BUILD_NUMBER} <br> buildurl: ${env.BUILD_URL}',  subject: 'pipeline status', to: 'pardium58@gmail.com'
+        }
+    }
 }
