--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -56,12 +56,17 @@ pipeline{
             steps{
 
                 dir('cicd-project3/k8s/'){
-                    sh '''
-                        helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
-                        tar -czvf java-app-${helmVersion}.tgz java-app/
-                        curl -u admin:8609 http://34.207.253.31:8081/repositories/helm-repo/ --upload file java-app-${helmVersion}
+                    // sh '''
+                    //     helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
+                    //     tar -czvf java-app-${helmVersion}.tgz java-app/
+                    //     curl -u admin:8609 http://34.207.253.31:8081/repositories/helm-repo/ --upload file java-app-${helmVersion}
 
-                    '''
+                    // '''
+                    script {
+                        def helmVersion = sh(script: "helm show chart java-app | grep 'version' | awk '{print $2}'", returnStdout: true).trim()
+                        sh "tar -czvf java-app-${helmVersion}.tgz java-app/"
+                        sh "curl -u admin:8609 -T java-app-${helmVersion}.tgz http://34.207.253.31:8081/repositories/helm-repo/"
+                    }
                 }
 
             }
