--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -56,12 +56,12 @@ pipeline{
             steps{
 
                 dir('cicd-project3/k8s/'){
-                    // sh '''
-                    //     helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
-                    //     tar -czvf java-app-${helmVersion}.tgz 
-                    //     curl -u admin:8609 http://34.207.253.31:8081/repositories/helm-repo/ --upload-file java-app-${helmVersion}
+                    sh '''
+                        helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
+                        tar -czvf java-app-${helmVersion}.tgz 
+                        curl -u admin:8609 http://34.207.253.31:8081/repositories/helm-repo/ --upload-file java-app-${helmVersion}
 
-                    // '''
+                    '''
                     
                 }
 
