--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline{
                 dir('cicd-project3/k8s/'){
                     sh '''
                         helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
-                        tar -czvf java-app-${helmVersion}.tgz 
+                        tar -czvf java-app-${helmVersion}.tgz java-app/
                         curl -u admin:8609 http://34.207.253.31:8081/repositories/helm-repo/ --upload-file java-app-${helmVersion}
 
                     '''
