--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline{
     agent any
+    environment{
+        KUBECONFIG='/home/ubuntu/kubeconfig'
+    }
     stages{
         // stage('sonar'){
         //     agent{
@@ -61,12 +64,15 @@ pipeline{
                         tar -czvf java-app-${helmVersion}.tgz java-app/
                         curl -u admin:8609 http://34.207.253.31:8081/repository/helm-repo/ -T java-app-${helmVersion}.tgz -v
 
-                    '''
-                    
+                    '''   
                 }
+            }   
+        }
 
+        stage('deploy on k8s'){
+            steps{
+                sh 'kubectl get pods'
             }
-            
         }
 
     }
