--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -55,19 +55,19 @@ pipeline{
 
                 // added comment because skip this stage
 
-        stage('push helm repo to nexus'){
-            steps{
+        // stage('push helm repo to nexus'){
+        //     steps{
 
-                dir('cicd-project3/k8s/'){
-                    sh '''
-                        helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
-                        tar -czvf java-app-${helmVersion}.tgz java-app/
-                        curl -u admin:8609 http://34.207.253.31:8081/repository/helm-repo/ -T java-app-${helmVersion}.tgz -v
+        //         dir('cicd-project3/k8s/'){
+        //             sh '''
+        //                 helmVersion=$(helm show chart java-app | grep 'version' | awk '{print $2}')
+        //                 tar -czvf java-app-${helmVersion}.tgz java-app/
+        //                 curl -u admin:8609 http://34.207.253.31:8081/repository/helm-repo/ -T java-app-${helmVersion}.tgz -v
 
-                    '''   
-                }
-            }   
-        }
+        //             '''   
+        //         }
+        //     }   
+        // }
 
         stage('deploy on k8s'){
             steps{
