change location of kubeconfig

--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline{
     agent any
     environment{
-        KUBECONFIG='/home/ubuntu/kubeconfig'
+        KUBECONFIG='/var/lib/jenkins/kubeconfig'
     }
     stages{
         // stage('sonar'){
