add a new stage for manual approve

--- a/cicd-project3/Jenkinsfile
+++ b/cicd-project3/Jenkinsfile
@@ -71,8 +71,12 @@ pipeline{
 
         stage('manual approval'){
             steps{
-                timeout(10){
-                    input(id: 'for deploy purpose', message: 'Deploy $JOB_NAME' , ok: 'Deploy')
+                script{
+
+                    
+                    timeout(10){
+                        input(id: 'for deploy purpose', message: 'Deploy $JOB_NAME' , ok: 'Deploy')
+                    }
                 }
             }
         }
